# just-compare-backend

./: .gitignore  .pre-commit-config.yaml  README.md  cloubuild.yaml  cloudbuild.yaml  dockerfile  pyproject.toml  requirements.txt  service.yaml
.github/workflow/: build-and-push-image.yml
.github/workflows/: build-and-push-image.yml
difference_summary/: gp2_summary.py
just_compare_backend/: backend.py
model-lm/: config.json  tokenizer_config.json
similarity_score/: gpt2_cosine_similarity.py
tests/: test_summary_app.py
